--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "public/01_hello_world_typescript"]
 	path = public/01_hello_world_typescript
 	url = https://gitlab.com/webdev101/01_hello_world_typescript.git
+[submodule "public/02_hello_html_typescript"]
+	path = public/02_hello_html_typescript
+	url = https://gitlab.com/webdev101/02_hello_html_typescript.git
+[submodule "public/03_tsconfig.json"]
+	path = public/03_tsconfig.json
+	url = https://gitlab.com/webdev101/03_tsconfig.json.git
