--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "public/03_tsconfig.json"]
 	path = public/03_tsconfig.json
 	url = https://gitlab.com/webdev101/03_tsconfig.json.git
+[submodule "public/04_debug"]
+	path = public/04_debug
+	url = git@gitlab.com:webdev101/04_debug.git
