--- a/public/15_cors/tsconfig.json
+++ b/public/15_cors/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "es6",
     "outDir": "out",
     "sourceMap": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "module": "es6",
+    "moduleResolution": "Node"
   },
   "files": ["src/app.ts"]
 }
